--- a/style.css
+++ b/style.css
@@ -65,6 +65,17 @@ h1{
     border-radius: 5px;
     border: 1px solid greenyellow;
 }
+.btn{
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    background:greenyellow;
+    border-radius: 3px;
+    border: none;
+    outline: none;
+    padding: .5rem 1rem;
+    color: black;
+}
 
 @media only screen and (max-width: 700px) {
     .row{
