--- a/style.css
+++ b/style.css
@@ -24,6 +24,16 @@ h1{
     font-size: 2rem;
     font-weight: 100;
 }
+.links{ 
+    color: lightgreen;
+    font-family: sans-serif;
+    font-weight: 100;
+    font-size: 1.5rem;
+  }
+.links-title{
+    font-size: 2rem;
+    padding-right: .2em;
+}
 .title-js{
     text-decoration: underline 5px solid rgb(238, 255, 0);
     -webkit-text-decoration: underline 5px solid rgb(238, 255, 0);
