--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 html{
     font-size: 10px;
-    font-family: sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: antiquewhite;
 }
 
@@ -20,6 +20,7 @@ main{
     background: rgb(1, 84, 139);
     width: 100%;
 }
+
 h1{
     font-size: 2rem;
     font-weight: 100;
@@ -58,7 +59,7 @@ h1{
     text-align: end;
     padding: 4em;
     text-transform: capitalize;
-    font-weight:800;
+    font-weight:600;
     letter-spacing: 1px;
 }
 .col-2{
@@ -74,6 +75,7 @@ h1{
     padding: .5em;
     border-radius: 5px;
     border: 1px solid greenyellow;
+    color: greenyellow;
 }
 .btn{
     font-weight: bold;
