--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ h1{
     outline: none;
     padding: .5rem 1rem;
     color: black;
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 700px) {
