--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h1{
     font-family: sans-serif;
     font-weight: 100;
     font-size: 1.5rem;
+    text-decoration: underline darkkhaki;
   }
 .links-title{
     font-size: 2rem;
@@ -44,6 +45,9 @@ h1{
     padding: 5em;
     font-size: 2rem;
     text-align: center;
+}
+.col-1 ul li{
+    list-style: none;
 }
 
 .row{
