--- a/modal.css
+++ b/modal.css
@@ -1,81 +1,98 @@
- *,
- *::after,
- *::before{
-    margin: 0 auto;
-    padding:0;
-    box-sizing: border-box;
- }
- html{
-    font-size:10px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
- }
- body{
-    box-sizing: inherit;
- }
+*,
+*::after,
+*::before{
+   margin: 0 auto;
+   padding:0;
+   box-sizing: border-box;
+}
+html{
+   font-size:10px;
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+body{
+   box-sizing: inherit;
+}
 
 
- main{
-    padding:5em;
-    height: 100vh;
-    width: 100%;
-    background-color:green;
-    position: relative;
- }
- header{
-    display:flex;
-    padding:1rem;
-    justify-content: space-around;
-    align-items: center;
- }
+main{
+   padding:5em;
+   height: 100vh;
+   width: 100%;
+   background-color:green;
+   position: relative;
+}
+header{
+   display:flex;
+   padding:1rem;
+   justify-content: space-around;
+   align-items: center;
+}
 
- .box1{
-    padding:1rem 5rem;
-    border:1px solid darkgreen;
-    border-radius: 3px;
-    box-shadow: 0 5px 10px 1px rgba(0, 0, 0, 0.315);
-    text-align: center;
-    font-size: 1.1rem;
-    margin: 1rem;
-    width: 350px;
- }
- 
- .box1 button{
-    margin-top: 1rem;
-    border: none;
-    background: lightgreen;
-    padding: .5rem 1rem;
-    border-radius: 3px;
-    cursor: pointer;
- }
- .modal-container{
-    top: 0%;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.281);
-    position: absolute;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 5%;
- }
+.box1{
+   padding:1rem 5rem;
+   border:1px solid darkgreen;
+   border-radius: 3px;
+   box-shadow: 0 5px 10px 1px rgba(0, 0, 0, 0.315);
+   background-color: aquamarine;
+   text-align: center;
+   font-weight: 700;
+   letter-spacing: 3.1px;
+   font-size: 1.1rem;
+   margin: 1rem;
+   width: 350px;
+}
 
- .modal-box{
-    padding: 5rem;
-    font-size: 2rem;
-    border: 1px solid greenyellow;
-    background-color: aquamarine;
-    border-radius: 3px;
-  
- }
+.box1 button{
+   margin-top: 1rem;
+   border: none;
+   background: darkgreen;
+   padding: .5rem 1rem;
+   border-radius: 3px;
+   cursor: pointer;
+   color: white;
+}
+.modal-container{
+   top: 0%;
+   left: 50%;
+   transform: translate(-50%, 0%);
+   width: 100%;
+   background-color: rgba(0, 0, 0, 0.281);
+   position: absolute;
+   height: 100%;
+  display: none;
+   align-items: center;
+   padding: 5%;
+}
 
- .modal-box button{
-    margin-top: .5rem;
-    border: none;
-    border-radius: 3px;
-    padding: .5rem 1rem;
-    background-color: darkgreen;
-    color: whitesmoke;
-    width: 100%;
-    cursor: pointer;
- }
+.modal-container .modal-box {
+   padding: 5rem;
+   font-size: 2rem;
+   border: 1px solid greenyellow;
+   background-color: aquamarine;
+   border-radius: 3px;
+}
+.modal-container .modal-box p{
+  padding: 3rem 0;
+  margin-bottom: 1rem;
+}
+.show{
+  display: flex;
+}
+
+.modal-box button{
+   margin-top: .5rem;
+   border: none;
+   border-radius: 3px;
+   padding: 2rem 1rem;
+   background-color: darkgreen;
+   color: whitesmoke;
+   font-size: 2rem;
+   width: 100%;
+   cursor: pointer;
+   transition: all 0.3s ease-in;
+  backface-visibility: hidden;
+}
+.modal-box button:hover{
+  background-color: darkslategrey;
+  scale: 0.888;
+}
