--- a/modal.css
+++ b/modal.css
@@ -56,7 +56,8 @@ header{
    left: 50%;
    transform: translate(-50%, 0%);
    width: 100%;
-   background-color: rgba(0, 0, 0, 0.281);
+   background-color: rgba(19, 77, 2, 0.865) ;
+
    position: absolute;
    height: 100%;
   display: none;
@@ -66,6 +67,7 @@ header{
 
 .modal-container .modal-box {
    padding: 5rem;
+   width: 50rem;
    font-size: 2rem;
    border: 1px solid greenyellow;
    background-color: aquamarine;
