--- a/style.css
+++ b/style.css
@@ -94,6 +94,64 @@ h1{
     cursor: pointer;
 }
 
+main nav ul{
+    display: flex;
+    padding: 1.5rem;
+    background:darkcyan;
+    justify-content:end;
+    position:fixed;
+    width: 100%;
+}
+main nav ul li{
+    margin-left: 1rem;
+    list-style: none;
+    text-align: center;
+    
+}
+main nav ul li a{
+    color: aliceblue;
+    text-decoration: none;
+    text-transform: uppercase;
+    
+}
+.mobile{
+    margin-top: 4rem;
+    position: fixed;
+    width: 100%;
+    padding: 3rem;
+    background-color: darkcyan;
+    display: flex;
+    flex-direction: column;
+    display: none;
+   
+}
+.mobile h2 a{
+    color: wheat;
+    text-decoration: none;
+}
+
+.navItem{
+    display: block;
+}
+.burger{
+    width: 25px;
+    height: 3vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+    display: none;
+  
+}
+.burger div{
+    border: 2px solid lightblue;
+    margin: .25rem;
+    width: 100%;
+ 
+}
+
+
+
 @media only screen and (max-width: 700px) {
     .row{
         flex-direction: column;
@@ -102,6 +160,9 @@ h1{
         padding: 1rem;
       
     }
+    .title-js{
+        margin-top: 10rem;
+    }
     .col-1, .col-2{
         padding: 3rem;
         width: 100%;
@@ -109,5 +170,15 @@ h1{
     .col-1{
         text-align: center;
     }
-    
+  
+  
+    .burger{
+        display: block;
+    }
+    main ul li{
+    display: none;
+    }
+  
+   
+
 }
