--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html{
     font-size: 10px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: antiquewhite;
+    scroll-behavior: smooth;
 }
 
 body{
