--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ main nav ul li a{
 }
 
 .tables{
-    width: 100%;
+    width: auto;
     font-size: 1rem;
     padding: 1rem;
     background-color: black;
