--- a/style.css
+++ b/style.css
@@ -53,7 +53,11 @@ h1{
 .col-1 ul li{
     list-style: none;
 }
-
+#dom li{
+    list-style: none;
+    display: block;
+ }
+ 
 .row{
     display: flex;
     justify-content:center;
@@ -171,9 +175,10 @@ main nav ul li a{
 .tables{
     width: 100%;
     font-size: 1rem;
-    padding: 1rem;
+    padding: .5rem;
     text-align: center;
     background-color: black;
+
 }
 .tables tr:first-child{
     font-weight: 900;
@@ -215,10 +220,11 @@ main nav ul li a{
     display: none;
     }
     .table{
-        padding: .5rem;
+        font-size: .6rem;
         text-align: center;
-        width: 50%;
+        display:table;
         background-color: black;
+        flex-wrap: wrap;
     }
    
 
