--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ main nav ul li a{
     margin-top: 4rem;
     position: fixed;
     width: 100%;
-    padding: 3rem;
+    padding: 1.5rem 0;
     background-color: darkcyan;
     display: flex;
     flex-direction: column;
@@ -153,10 +153,18 @@ main nav ul li a{
 .mobile h2:hover{
     background-color: black;
     transition: all 0.6s ease-in;
+    width: 100%;
+}
+.mobile h2{
+    width: 100%;
+    padding: .5rem 2rem;
+    text-transform: capitalize;
+    font-weight: 500;
 }
 .mobile h2 a{
     color: wheat;
     text-decoration: none;
+
   
 }
 
