update object literals

--- a/style.css
+++ b/style.css
@@ -237,6 +237,9 @@ main nav ul li a{
     .col-2 p{
         font-size: 1.5rem;
     }
+    .col-2 li{
+        font-size: 1.5rem;
+    }
     .answer{
         font-size: 1.5rem;
     }
