--- a/style.css
+++ b/style.css
@@ -20,8 +20,6 @@ body{
 main{
     background: rgb(1, 84, 139);
     width: auto;
-    backface-visibility: hidden;
-   
     
 }
 
@@ -107,18 +105,18 @@ h1{
 }
 
 main nav ul{
-    display: flex;
-    padding: 1.5rem;
+    display: flex;  
     background:darkcyan;
     justify-content:end;
     position:fixed;
     width: 100%;
+   
 }
 main nav ul li{
     margin-left: 1rem;
     list-style: none;
     text-align: center;
-    
+    padding: 1rem 1rem;
 }
 main nav ul li a{
     color: aliceblue;
@@ -135,15 +133,16 @@ main nav ul li a{
     display: flex;
     flex-direction: column;
     display: none;
-    
+    z-index: 9;
    
 }
 .list-logo{
     left:  0;
     position: absolute;
     display: flex;
-    top: 15%;
+    top: 0;
     padding-left: 1rem;
+    z-index: 9;
    
 }
 .list .title-nav{
@@ -151,21 +150,23 @@ main nav ul li a{
     letter-spacing: .2rem;
     
 }
-.mobile h2:hover{
+.mobile li:hover{
     background-color: black;
     transition: all 0.6s ease-in;
     width: 100%;    
 }
 
 
-.mobile h2{
+.mobile li{
     width: 100%;
     padding: .5rem 2rem;
     text-transform: capitalize;
-    font-weight: 500;
+    font-weight: 600;
+    font-size: 1.1rem;
     cursor: pointer;
+    list-style: none;
 }
-.mobile h2 a{
+.mobile li a{
     color: wheat;
     text-decoration: none;
 }
@@ -181,6 +182,7 @@ main nav ul li a{
     justify-content: center;
     cursor: pointer;
     display: none;
+    z-index: 9;
   
 }
 .burger div{
@@ -259,7 +261,10 @@ main nav ul li a{
         flex-wrap: wrap;
     }
    .list-logo{
-    top: 25%;
+    top: 10%;
+}
+main nav ul{
+    padding: 1rem;
 }
 
 }
