--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body{
 main{
     background: rgb(1, 84, 139);
     width: auto;
+    backface-visibility: hidden;
+   
     
 }
 
@@ -105,18 +107,18 @@ h1{
 }
 
 main nav ul{
-    display: flex;  
+    display: flex;
+    padding: 1.5rem;
     background:darkcyan;
     justify-content:end;
     position:fixed;
     width: 100%;
-   
 }
 main nav ul li{
     margin-left: 1rem;
     list-style: none;
     text-align: center;
-    padding: 1rem 1rem;
+    
 }
 main nav ul li a{
     color: aliceblue;
@@ -133,16 +135,15 @@ main nav ul li a{
     display: flex;
     flex-direction: column;
     display: none;
-    z-index: 9;
+    
    
 }
 .list-logo{
     left:  0;
     position: absolute;
     display: flex;
-    top: 0;
+    top: 15%;
     padding-left: 1rem;
-    z-index: 9;
    
 }
 .list .title-nav{
@@ -150,7 +151,7 @@ main nav ul li a{
     letter-spacing: .2rem;
     
 }
-.mobile li:hover{
+.mobile h2:hover{
     background-color: black;
     transition: all 0.6s ease-in;
     width: 100%;    
@@ -161,8 +162,7 @@ main nav ul li a{
     width: 100%;
     padding: .5rem 2rem;
     text-transform: capitalize;
-    font-weight: 600;
-    font-size: 1.1rem;
+    font-weight: 500;
     cursor: pointer;
     list-style: none;
 }
@@ -182,7 +182,6 @@ main nav ul li a{
     justify-content: center;
     cursor: pointer;
     display: none;
-    z-index: 9;
   
 }
 .burger div{
@@ -261,10 +260,7 @@ main nav ul li a{
         flex-wrap: wrap;
     }
    .list-logo{
-    top: 15%;
-}
-main nav ul{
-    padding: 1rem;
+    top: 25%;
 }
 
 }
